--- a/app/styles/member_input.module.css
+++ b/app/styles/member_input.module.css
@@ -13,13 +13,48 @@
     height: auto; /* 높이는 자동으로 조절 */
   }
   
-.content{
+  .content {
     font-size: 1.2rem;
-    /*background-color: white;*/
     color: rgb(0, 0, 0);
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    display: flex; /* 플렉스 컨테이너로 설정 */
+    flex-direction: column; /* 요소들을 수직 방향으로 배치 */
+    align-items: center; /* 가로 방향 중앙 정렬 */
+    justify-content: center; /* 세로 방향 중앙 정렬 */
+    text-align: center; /* 텍스트 자체를 중앙 정렬 */
+  }
+  .addbutton {
+    display: flex;
     align-items: center;
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 16px;
+    padding: 0.7em 1.4em 0.7em 1.1em;
+    color: white;
+    background: linear-gradient(0deg, rgba(0, 112, 243, 0.8) 0%, rgba(0, 112, 243, 0.8) 100%);
+    border: none;
+    box-shadow: 0 0.7em 1.5em -0.5em rgba(0, 112, 243, 0.48);
+    letter-spacing: 0.05em;
+    border-radius: 20em;
+    transition: box-shadow 0.2s ease-in-out;
+  }
+  
+  .addbutton svg {
+    margin-right: 6px;
+  }
+  
+  .addbutton:hover {
+    box-shadow: 0 0.5em 1.5em -0.5em rgba(0, 112, 243, 0.8);
+  }
+  
+  .addbutton:active {
+    box-shadow: 0 0.3em 1em -0.5em rgba(0, 112, 243, 0.8);
+  }
+  
+  .addlocation {
+    display: flex;
     justify-content: center;
-}
+    margin-top: 10rem; /* 버튼과 컨텐츠 사이의 간격을 조절할 수 있습니다. */
+  }
