--- a/app/styles/Home.module.css
+++ b/app/styles/Home.module.css
@@ -17,12 +17,34 @@
     height: auto; /* 높이는 자동으로 조절됩니다. */
   }
   
-  .startButton {
-    padding: 0.8rem 1.6rem;
-    font-size: 1.2rem;
-    background-color: #0070f3;
+  .startbutton {
+    display: flex;
+    align-items: center;
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 16px;
+    padding: 0.7em 1.4em 0.7em 1.1em;
     color: white;
+    background: linear-gradient(0deg, rgba(0, 112, 243, 0.8) 0%, rgba(0, 112, 243, 0.8) 100%);
     border: none;
-    border-radius: 4px;
-    cursor: pointer;
+    box-shadow: 0 0,7em 1.5em -0.5em rgba(0, 112, 243, 0.8);
+    letter-spacing: 0.05em;
+    border-radius: 20em;
+  
   }
+  
+  .startbutton:hover {
+    box-shadow: 0 0.5em 1.5em -0.5em rgba(0, 112, 243, 0.8);
+  }
+  
+  .startbutton:active {
+    box-shadow: 0 0.3em 1em -0.5em rgba(0, 112, 243, 0.8);
+  }
+  
+
+  .startlocation {
+    display: flex;
+    justify-content: center;
+    margin-top: 10rem; /* 버튼과 컨텐츠 사이의 간격을 조절할 수 있습니다. */
+  }
+  
